--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		<nav>
 
       <a href="#" class="nav-icon" aria-label="homepage" aria-current="page">
-        <img src="img/logo.svg" alt="chat icon" />
+        <img src="ressources/logo.svg" alt="chat icon" />
         <span>SGL Consulting</span>
       </a>
 
