--- a/index.html
+++ b/index.html
@@ -1,52 +1,17 @@
 <html lang="en"><head>
-		<meta charset="utf-8">
-		<title>SGL Consulting - Clinical trial advisor</title>
-		<meta name="description" content="This website to introduce my company.">
-		<meta name="keywords" content="clinical trial, rare diseases, oncology, Global specialistr">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<style>
-			/******************************************************
-				RESET
-			*******************************************************/
-			* { margin:0; padding:0; }
-			*, *:before, *:after { box-sizing:border-box; }
-
-			/******************************************************
-				PAGE LAYOUT
-			*******************************************************/
-
-			body { font:14px/1.5em Arial, sans-serif; color:#333; background:gainsboro; }
-
-			#page {margin:0 auto; padding:0 ; }
-			#header, #footer { background:Gainsboro; }
-			#header, #content { padding:20px; }
-			#content { background:WhiteSmoke; }
-			#footer { padding:40px 20px; }
-
-			h1, h2 { line-height:1.2em; }
-			ul { margin:10px 15px; }
-			p { margin:10px 0; }
-
-			/******************************************************
-				BOTTOM FOOTER
-			*******************************************************/
-
-			#page {
-				min-height:100vh;
-				display:flex;
-				flex-direction:column;
-			}
-
-			#content {
-				flex-grow:1;
-			}
-
-		</style>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>SGL Consulting - Clinical trial advisor</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Roboto+Flex:opsz,wght@8..144,100;8..144,300;8..144,500;8..144,700;8..144,900&display=swap" rel="stylesheet"/>
 	</head>
 	<body>
 		<nav>
 
-      <a href="#" class="nav-icon" aria-label="homepage" aria-current="page">
+		<a href="#" class="nav-icon" aria-label="homepage" aria-current="page">
         <img src="ressources/logo.svg" alt="chat icon" />
         <span>SGL Consulting</span>
       </a>
@@ -78,7 +43,6 @@
 
     </nav>
 		<div id="page">
-			<div id="header"><h1>SGL Consulting</h1></div>
 			<div id="content">
 				<ul>
 					<li>Home</li>
@@ -88,9 +52,9 @@
 				</ul>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent quam ipsum, rutrum a efficitur vitae, euismod laoreet sapien. Proin eget tempus tellus, id vehicula velit. Fusce aliquam purus et sapien ullamcorper ultrices in vitae urna. Praesent semper urna tempus libero congue, a faucibus nunc semper. Aenean eget hendrerit sem, non fermentum risus. Curabitur elementum blandit dui eu finibus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec dignissim turpis. Nullam et scelerisque nunc. Praesent sit amet aliquam odio, a tincidunt orci. Nulla congue id tellus eu eleifend. Nullam tincidunt nulla nec ex congue, et lobortis orci congue. Nam sagittis magna ac quam hendrerit venenatis. Proin malesuada euismod elit, ac condimentum nulla placerat in. Praesent erat lectus, semper condimentum efficitur sit amet, convallis vitae nulla.</p>
 				<p>Etiam non egestas sem, et malesuada urna. Maecenas rutrum accumsan lacus, suscipit pretium erat. Pellentesque lacus nibh, interdum sed ultricies a, malesuada vel magna. Cras sit amet luctus nibh. Aliquam in posuere tellus, non pulvinar erat. Suspendisse luctus nec lectus pellentesque luctus. Mauris quis placerat dui. Sed feugiat urna a nisl fringilla commodo. Duis nec magna quis ex consequat pulvinar. In felis eros, commodo porttitor elementum vitae, viverra non est.</p>
-				<p>Integer sagittis eget nisi eu bibendum. Cras eleifend aliquam sapien, ut placerat ante vulputate eget. Phasellus sed imperdiet ante, id porta est. Donec nunc tellus, facilisis in tortor vitae, rutrum pretium nibh. Suspendisse in tempus nulla. Aenean placerat magna et molestie mattis. Nulla non magna porttitor neque porttitor eleifend. Phasellus vel felis nunc. Sed pretium sodales turpis nec consectetur. Suspendisse viverra arcu nec mauris finibus pretium. Etiam vitae lorem suscipit arcu sagittis dignissim.</p>
+<!--				<p>Integer sagittis eget nisi eu bibendum. Cras eleifend aliquam sapien, ut placerat ante vulputate eget. Phasellus sed imperdiet ante, id porta est. Donec nunc tellus, facilisis in tortor vitae, rutrum pretium nibh. Suspendisse in tempus nulla. Aenean placerat magna et molestie mattis. Nulla non magna porttitor neque porttitor eleifend. Phasellus vel felis nunc. Sed pretium sodales turpis nec consectetur. Suspendisse viverra arcu nec mauris finibus pretium. Etiam vitae lorem suscipit arcu sagittis dignissim.</p>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent quam ipsum, rutrum a efficitur vitae, euismod laoreet sapien. Proin eget tempus tellus, id vehicula velit. Fusce aliquam purus et sapien ullamcorper ultrices in vitae urna. Praesent semper urna tempus libero congue, a faucibus nunc semper. Aenean eget hendrerit sem, non fermentum risus. Curabitur elementum blandit dui eu finibus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec dignissim turpis. Nullam et scelerisque nunc. Praesent sit amet aliquam odio, a tincidunt orci. Nulla congue id tellus eu eleifend. Nullam tincidunt nulla nec ex congue, et lobortis orci congue. Nam sagittis magna ac quam hendrerit venenatis. Proin malesuada euismod elit, ac condimentum nulla placerat in. Praesent erat lectus, semper condimentum efficitur sit amet, convallis vitae nulla.</p>
-<!--				<p>Etiam non egestas sem, et malesuada urna. Maecenas rutrum accumsan lacus, suscipit pretium erat. Pellentesque lacus nibh, interdum sed ultricies a, malesuada vel magna. Cras sit amet luctus nibh. Aliquam in posuere tellus, non pulvinar erat. Suspendisse luctus nec lectus pellentesque luctus. Mauris quis placerat dui. Sed feugiat urna a nisl fringilla commodo. Duis nec magna quis ex consequat pulvinar. In felis eros, commodo porttitor elementum vitae, viverra non est.</p>
+				<p>Etiam non egestas sem, et malesuada urna. Maecenas rutrum accumsan lacus, suscipit pretium erat. Pellentesque lacus nibh, interdum sed ultricies a, malesuada vel magna. Cras sit amet luctus nibh. Aliquam in posuere tellus, non pulvinar erat. Suspendisse luctus nec lectus pellentesque luctus. Mauris quis placerat dui. Sed feugiat urna a nisl fringilla commodo. Duis nec magna quis ex consequat pulvinar. In felis eros, commodo porttitor elementum vitae, viverra non est.</p>
 				<p>Integer sagittis eget nisi eu bibendum. Cras eleifend aliquam sapien, ut placerat ante vulputate eget. Phasellus sed imperdiet ante, id porta est. Donec nunc tellus, facilisis in tortor vitae, rutrum pretium nibh. Suspendisse in tempus nulla. Aenean placerat magna et molestie mattis. Nulla non magna porttitor neque porttitor eleifend. Phasellus vel felis nunc. Sed pretium sodales turpis nec consectetur. Suspendisse viverra arcu nec mauris finibus pretium. Etiam vitae lorem suscipit arcu sagittis dignissim.</p>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent quam ipsum, rutrum a efficitur vitae, euismod laoreet sapien. Proin eget tempus tellus, id vehicula velit. Fusce aliquam purus et sapien ullamcorper ultrices in vitae urna. Praesent semper urna tempus libero congue, a faucibus nunc semper. Aenean eget hendrerit sem, non fermentum risus. Curabitur elementum blandit dui eu finibus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec dignissim turpis. Nullam et scelerisque nunc. Praesent sit amet aliquam odio, a tincidunt orci. Nulla congue id tellus eu eleifend. Nullam tincidunt nulla nec ex congue, et lobortis orci congue. Nam sagittis magna ac quam hendrerit venenatis. Proin malesuada euismod elit, ac condimentum nulla placerat in. Praesent erat lectus, semper condimentum efficitur sit amet, convallis vitae nulla.</p>
 				<p>Etiam non egestas sem, et malesuada urna. Maecenas rutrum accumsan lacus, suscipit pretium erat. Pellentesque lacus nibh, interdum sed ultricies a, malesuada vel magna. Cras sit amet luctus nibh. Aliquam in posuere tellus, non pulvinar erat. Suspendisse luctus nec lectus pellentesque luctus. Mauris quis placerat dui. Sed feugiat urna a nisl fringilla commodo. Duis nec magna quis ex consequat pulvinar. In felis eros, commodo porttitor elementum vitae, viverra non est.</p>
