--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       </div>
 
     </nav>
+			<div id="page">
 			<div id="content">
 				<ul>
 					<li>Home</li>
@@ -63,6 +64,8 @@
 				<p>Integer sagittis eget nisi eu bibendum. Cras eleifend aliquam sapien, ut placerat ante vulputate eget. Phasellus sed imperdiet ante, id porta est. Donec nunc tellus, facilisis in tortor vitae, rutrum pretium nibh. Suspendisse in tempus nulla. Aenean placerat magna et molestie mattis. Nulla non magna porttitor neque porttitor eleifend. Phasellus vel felis nunc. Sed pretium sodales turpis nec consectetur. Suspendisse viverra arcu nec mauris finibus pretium. Etiam vitae lorem suscipit arcu sagittis dignissim.</p>
 				-->
 			</div>
+
 		<div id="footer"><h2>My footer</h2></div>
+					</div>
 		<script src="script.js"></script>
 </body></html>
