--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				-->
 			</div>
 
-		<div id="footer"><h2>My footer</h2></div>
+		<div id="footer"><a>My footer</a></div>
 					</div>
 		<script src="script.js"></script>
 </body></html>
