--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Slongfort Consulting - Clinical trial advisor</title>
+    <title>Longfort Consulting - Clinical trial advisor</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -13,7 +13,7 @@
 	<nav>
 		<a href="#" class="nav-icon" aria-label="homepage" aria-current="page">
         <img src="ressources/logo.svg" alt="chat icon" />
-        <span>Slongfort Consulting</span>
+        <span>Longfort Consulting</span>
       </a>
       <div class="main-navlinks">
         <button type="button" class="hamburger"  aria-label="Toggle Navigation" aria-expanded="false">
