--- a/index.html
+++ b/index.html
@@ -1,68 +1,82 @@
-<html lang="en"><head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Longfort Consulting - Clinical trial advisor</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Roboto+Flex:opsz,wght@8..144,100;8..144,300;8..144,500;8..144,700;8..144,900&display=swap" rel="stylesheet"/>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Longfort Consulting - Clinical trial advisor</title>
+		<link rel="stylesheet" href="style.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Roboto+Flex:opsz,wght@8..144,100;8..144,300;8..144,500;8..144,700;8..144,900&display=swap"
+			rel="stylesheet" />
 	</head>
 	<body>
-<div id="page">
-	<nav>
-		<a href="#" class="nav-icon" aria-label="homepage" aria-current="page">
-        <img src="ressources/logo.svg" alt="chat icon" />
-        <span>Longfort Consulting</span>
-      </a>
-      <div class="main-navlinks">
-        <button type="button" class="hamburger"  aria-label="Toggle Navigation" aria-expanded="false">
-            <span></span>
-            <span></span>
-            <span></span>
-          </button>
-        <div class="navlinks-container">
-          <a href="#" aria-current="page">Home</a>
-          <a href="#">Services</a>
-          <a href="#">Pricing</a>
-          <a href="#">Community</a>
-          <a href="#">Contact</a>
-        </div>
-      </div>
+		<div id="page">
+			<nav>
+				<a href="#" class="nav-icon" aria-label="homepage" aria-current="page">
+					<img src="ressources/logo.svg" alt="chat icon" />
+					<span>Longfort Consulting</span>
+				</a>
+				<div class="main-navlinks">
+					<button type="button" class="hamburger" aria-label="Toggle Navigation" aria-expanded="false">
+						<span></span>
+						<span></span>
+						<span></span>
+					</button>
+					<div class="navlinks-container">
+						<a href="#" aria-current="page">Home</a>
+						<a href="#">Services</a>
+						<a href="#">Pricing</a>
+						<a href="#">Community</a>
+						<a href="#">Contact</a>
+					</div>
+				</div>
 
-      <div class="nav-authentication">
-        <a href="#" class="user-toggler" aria-label="Sign in page">
-          <img src="ressources/user.svg" alt="user icon" />
-        </a>
-        <div class="sign-btns">
-          <button type="button">Sign In</button>
-          <button type="button">Sign Up</button>
-        </div>
-      </div>
-    </nav>
+				<div class="nav-authentication">
+					<a href="#" class="user-toggler" aria-label="Sign in page">
+						<img src="ressources/user.svg" alt="user icon" />
+					</a>
+					<div class="sign-btns">
+						<button type="button">Sign In</button>
+						<button type="button">Sign Up</button>
+					</div>
+				</div>
+			</nav>
 			<div id="content">
 				<ul>
 					<li>Home</li>
 					<li>Services</li>
 					<li>My strenghs <a href="sticky-footer-flexbox-oldies.html">old browsers</a></li>
-					<li><a href="https://www.design-fluide.com/01-09-2016/fixer-son-footer-en-bas-de-page-grace-a-flexbox/" target="_blank">Back to article</a></li>
+					<li>
+						<a
+							href="https://www.design-fluide.com/01-09-2016/fixer-son-footer-en-bas-de-page-grace-a-flexbox/"
+							target="_blank"
+							>Back to article</a
+						>
+					</li>
 				</ul>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent quam ipsum, rutrum a efficitur vitae, euismod laoreet sapien. Proin eget tempus tellus, id vehicula velit. Fusce aliquam purus et sapien ullamcorper ultrices in vitae urna. Praesent semper urna tempus libero congue, a faucibus nunc semper. Aenean eget hendrerit sem, non fermentum risus. Curabitur elementum blandit dui eu finibus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec dignissim turpis. Nullam et scelerisque nunc. Praesent sit amet aliquam odio, a tincidunt orci. Nulla congue id tellus eu eleifend. Nullam tincidunt nulla nec ex congue, et lobortis orci congue. Nam sagittis magna ac quam hendrerit venenatis. Proin malesuada euismod elit, ac condimentum nulla placerat in. Praesent erat lectus, semper condimentum efficitur sit amet, convallis vitae nulla.</p>
-				<p>Etiam non egestas sem, et malesuada urna. Maecenas rutrum accumsan lacus, suscipit pretium erat. Pellentesque lacus nibh, interdum sed ultricies a, malesuada vel magna. Cras sit amet luctus nibh. Aliquam in posuere tellus, non pulvinar erat. Suspendisse luctus nec lectus pellentesque luctus. Mauris quis placerat dui. Sed feugiat urna a nisl fringilla commodo. Duis nec magna quis ex consequat pulvinar. In felis eros, commodo porttitor elementum vitae, viverra non est.</p>
-<!--				<p>Integer sagittis eget nisi eu bibendum. Cras eleifend aliquam sapien, ut placerat ante vulputate eget. Phasellus sed imperdiet ante, id porta est. Donec nunc tellus, facilisis in tortor vitae, rutrum pretium nibh. Suspendisse in tempus nulla. Aenean placerat magna et molestie mattis. Nulla non magna porttitor neque porttitor eleifend. Phasellus vel felis nunc. Sed pretium sodales turpis nec consectetur. Suspendisse viverra arcu nec mauris finibus pretium. Etiam vitae lorem suscipit arcu sagittis dignissim.</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent quam ipsum, rutrum a efficitur vitae, euismod laoreet sapien. Proin eget tempus tellus, id vehicula velit. Fusce aliquam purus et sapien ullamcorper ultrices in vitae urna. Praesent semper urna tempus libero congue, a faucibus nunc semper. Aenean eget hendrerit sem, non fermentum risus. Curabitur elementum blandit dui eu finibus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec dignissim turpis. Nullam et scelerisque nunc. Praesent sit amet aliquam odio, a tincidunt orci. Nulla congue id tellus eu eleifend. Nullam tincidunt nulla nec ex congue, et lobortis orci congue. Nam sagittis magna ac quam hendrerit venenatis. Proin malesuada euismod elit, ac condimentum nulla placerat in. Praesent erat lectus, semper condimentum efficitur sit amet, convallis vitae nulla.</p>
-				<p>Etiam non egestas sem, et malesuada urna. Maecenas rutrum accumsan lacus, suscipit pretium erat. Pellentesque lacus nibh, interdum sed ultricies a, malesuada vel magna. Cras sit amet luctus nibh. Aliquam in posuere tellus, non pulvinar erat. Suspendisse luctus nec lectus pellentesque luctus. Mauris quis placerat dui. Sed feugiat urna a nisl fringilla commodo. Duis nec magna quis ex consequat pulvinar. In felis eros, commodo porttitor elementum vitae, viverra non est.</p>
-				<p>Integer sagittis eget nisi eu bibendum. Cras eleifend aliquam sapien, ut placerat ante vulputate eget. Phasellus sed imperdiet ante, id porta est. Donec nunc tellus, facilisis in tortor vitae, rutrum pretium nibh. Suspendisse in tempus nulla. Aenean placerat magna et molestie mattis. Nulla non magna porttitor neque porttitor eleifend. Phasellus vel felis nunc. Sed pretium sodales turpis nec consectetur. Suspendisse viverra arcu nec mauris finibus pretium. Etiam vitae lorem suscipit arcu sagittis dignissim.</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent quam ipsum, rutrum a efficitur vitae, euismod laoreet sapien. Proin eget tempus tellus, id vehicula velit. Fusce aliquam purus et sapien ullamcorper ultrices in vitae urna. Praesent semper urna tempus libero congue, a faucibus nunc semper. Aenean eget hendrerit sem, non fermentum risus. Curabitur elementum blandit dui eu finibus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec dignissim turpis. Nullam et scelerisque nunc. Praesent sit amet aliquam odio, a tincidunt orci. Nulla congue id tellus eu eleifend. Nullam tincidunt nulla nec ex congue, et lobortis orci congue. Nam sagittis magna ac quam hendrerit venenatis. Proin malesuada euismod elit, ac condimentum nulla placerat in. Praesent erat lectus, semper condimentum efficitur sit amet, convallis vitae nulla.</p>
-				<p>Etiam non egestas sem, et malesuada urna. Maecenas rutrum accumsan lacus, suscipit pretium erat. Pellentesque lacus nibh, interdum sed ultricies a, malesuada vel magna. Cras sit amet luctus nibh. Aliquam in posuere tellus, non pulvinar erat. Suspendisse luctus nec lectus pellentesque luctus. Mauris quis placerat dui. Sed feugiat urna a nisl fringilla commodo. Duis nec magna quis ex consequat pulvinar. In felis eros, commodo porttitor elementum vitae, viverra non est.</p>
-    			<p>Integer sagittis eget nisi eu bibendum. Cras eleifend aliquam sapien, ut placerat ante vulputate eget. Phasellus sed imperdiet ante, id porta est. Donec nunc tellus, facilisis in tortor vitae, rutrum pretium nibh. Suspendisse in tempus nulla. Aenean placerat magna et molestie mattis. Nulla non magna porttitor neque porttitor eleifend. Phasellus vel felis nunc. Sed pretium sodales turpis nec consectetur. Suspendisse viverra arcu nec mauris finibus pretium. Etiam vitae lorem suscipit arcu sagittis dignissim.</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent quam ipsum, rutrum a efficitur vitae, euismod laoreet sapien. Proin eget tempus tellus, id vehicula velit. Fusce aliquam purus et sapien ullamcorper ultrices in vitae urna. Praesent semper urna tempus libero congue, a faucibus nunc semper. Aenean eget hendrerit sem, non fermentum risus. Curabitur elementum blandit dui eu finibus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec dignissim turpis. Nullam et scelerisque nunc. Praesent sit amet aliquam odio, a tincidunt orci. Nulla congue id tellus eu eleifend. Nullam tincidunt nulla nec ex congue, et lobortis orci congue. Nam sagittis magna ac quam hendrerit venenatis. Proin malesuada euismod elit, ac condimentum nulla placerat in. Praesent erat lectus, semper condimentum efficitur sit amet, convallis vitae nulla.</p>
-				<p>Etiam non egestas sem, et malesuada urna. Maecenas rutrum accumsan lacus, suscipit pretium erat. Pellentesque lacus nibh, interdum sed ultricies a, malesuada vel magna. Cras sit amet luctus nibh. Aliquam in posuere tellus, non pulvinar erat. Suspendisse luctus nec lectus pellentesque luctus. Mauris quis placerat dui. Sed feugiat urna a nisl fringilla commodo. Duis nec magna quis ex consequat pulvinar. In felis eros, commodo porttitor elementum vitae, viverra non est.</p>
-				<p>Integer sagittis eget nisi eu bibendum. Cras eleifend aliquam sapien, ut placerat ante vulputate eget. Phasellus sed imperdiet ante, id porta est. Donec nunc tellus, facilisis in tortor vitae, rutrum pretium nibh. Suspendisse in tempus nulla. Aenean placerat magna et molestie mattis. Nulla non magna porttitor neque porttitor eleifend. Phasellus vel felis nunc. Sed pretium sodales turpis nec consectetur. Suspendisse viverra arcu nec mauris finibus pretium. Etiam vitae lorem suscipit arcu sagittis dignissim.</p>
-				-->
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent quam ipsum, rutrum a efficitur
+					vitae, euismod laoreet sapien. Proin eget tempus tellus, id vehicula velit. Fusce aliquam purus et
+					sapien ullamcorper ultrices in vitae urna. Praesent semper urna tempus libero congue, a faucibus
+					nunc semper. Aenean eget hendrerit sem, non fermentum risus. Curabitur elementum blandit dui eu
+					finibus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec dignissim turpis.
+					Nullam et scelerisque nunc. Praesent sit amet aliquam odio, a tincidunt orci. Nulla congue id tellus
+					eu eleifend. Nullam tincidunt nulla nec ex congue, et lobortis orci congue. Nam sagittis magna ac
+					quam hendrerit venenatis. Proin malesuada euismod elit, ac condimentum nulla placerat in. Praesent
+					erat lectus, semper condimentum efficitur sit amet, convallis vitae nulla.
+				</p>
+				<p>
+					Etiam non egestas sem, et malesuada urna. Maecenas rutrum accumsan lacus, suscipit pretium erat.
+					Pellentesque lacus nibh, interdum sed ultricies a, malesuada vel magna. Cras sit amet luctus nibh.
+					Aliquam in posuere tellus, non pulvinar erat. Suspendisse luctus nec lectus pellentesque luctus.
+					Mauris quis placerat dui. Sed feugiat urna a nisl fringilla commodo. Duis nec magna quis ex
+					consequat pulvinar. In felis eros, commodo porttitor elementum vitae, viverra non est.
+				</p>
 			</div>
-</div>
+		</div>
 		<div id="footer"><a>My footer</a></div>
-
 		<script src="script.js"></script>
-</body></html>
+	</body>
+</html>
