--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 			href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Roboto+Flex:opsz,wght@8..144,100;8..144,300;8..144,500;8..144,700;8..144,900&display=swap"
 			rel="stylesheet" />
 	</head>
-	<body>
-		<div id="page">
+	<body id="page">
 			<nav>
 				<a href="#" class="nav-icon" aria-label="homepage" aria-current="page">
 					<img src="ressources/logo.svg" alt="chat icon" />
@@ -75,7 +74,6 @@
 					consequat pulvinar. In felis eros, commodo porttitor elementum vitae, viverra non est.
 				</p>
 			</div>
-		</div>
 		<div id="footer"><a>My footer</a></div>
 
 		<script src="script.js"></script>
