--- a/index.html
+++ b/index.html
@@ -75,8 +75,14 @@
 					consequat pulvinar. In felis eros, commodo porttitor elementum vitae, viverra non est.
 				</p>
 			</div>
-		<div id="footer"><a>My footer</a></div>
-
+		<div id="footer">
+			<div class="footer-container">
+						<a href="#">Services</a>
+						<a href="#">Pricing</a>
+						<a href="#">Community</a>
+						<a href="#">Contact</a>
+					</div>
+			</div>
 		<script src="script.js"></script>
 	</body>
 </html>
