--- a/index.html
+++ b/index.html
@@ -45,35 +45,12 @@
 			</nav>
 			<div id="content">
 				<ul>
-					<li>Home</li>
-					<li>Services</li>
-					<li>My strenghs <a href="sticky-footer-flexbox-oldies.html">old browsers</a></li>
-					<li>
-						<a
-							href="https://www.design-fluide.com/01-09-2016/fixer-son-footer-en-bas-de-page-grace-a-flexbox/"
-							target="_blank"
-							>Back to article</a
-						>
-					</li>
+					<li>Global</li>
+					<li>Regulatory</li>
+					<li>Ethics</li>
+					<li>Approvals</li>
+					<li>Timely solutions</li>
 				</ul>
-				<p>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent quam ipsum, rutrum a efficitur
-					vitae, euismod laoreet sapien. Proin eget tempus tellus, id vehicula velit. Fusce aliquam purus et
-					sapien ullamcorper ultrices in vitae urna. Praesent semper urna tempus libero congue, a faucibus
-					nunc semper. Aenean eget hendrerit sem, non fermentum risus. Curabitur elementum blandit dui eu
-					finibus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec dignissim turpis.
-					Nullam et scelerisque nunc. Praesent sit amet aliquam odio, a tincidunt orci. Nulla congue id tellus
-					eu eleifend. Nullam tincidunt nulla nec ex congue, et lobortis orci congue. Nam sagittis magna ac
-					quam hendrerit venenatis. Proin malesuada euismod elit, ac condimentum nulla placerat in. Praesent
-					erat lectus, semper condimentum efficitur sit amet, convallis vitae nulla.
-				</p>
-				<p>
-					Etiam non egestas sem, et malesuada urna. Maecenas rutrum accumsan lacus, suscipit pretium erat.
-					Pellentesque lacus nibh, interdum sed ultricies a, malesuada vel magna. Cras sit amet luctus nibh.
-					Aliquam in posuere tellus, non pulvinar erat. Suspendisse luctus nec lectus pellentesque luctus.
-					Mauris quis placerat dui. Sed feugiat urna a nisl fringilla commodo. Duis nec magna quis ex
-					consequat pulvinar. In felis eros, commodo porttitor elementum vitae, viverra non est.
-				</p>
 			</div>
 		<div id="footer">
 			<div class="footer-container">
