--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
 			</nav>
 			<div id="content">
 				<ul>
-					<li>Global</li>
-					<li>Regulatory</li>
-					<li>Ethics</li>
-					<li>Approvals</li>
-					<li>Timely solutions</li>
+					<li><a class="initiale">g</a>lobal</li>
+					<li><a class="initiale">r</a>egulatory</li>
+					<li><a class="initiale">e</a>thics</li>
+					<li><a class="initiale">a</a>pprovals</li>
+					<li><a class="initiale">t</a>imely solutions</li>
 				</ul>
 			</div>
 		<div id="footer">
