--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                 class="button"
                                 >Contact Us</a
                             >
-                            <a href="/ressources/facture_9079687955_2025-03-12.pdf" class="button reverse" download
+                            <a href="/ressources/leaflet.pdf" class="button reverse" download
                                 >Resume</a
                             >
                         </div>
